--- a/index.html
+++ b/index.html
@@ -13,7 +13,78 @@
     <title>JHC - Jack Habboosh Creatives</title>
 </head>
 <body>
-    <h1>Jack Habboosh Creatives</h1>
+    <header>
+        <!-- class and id of hero for css selection. background image used -->
+        <section class="hero" id="hero" style="background-image: url('/images/pexels-samuel-bütikofer-5226950.jpg'); background-size: cover; height: 100vh;">
+          <nav class="navbar navbar-expand-lg navbar-dark" id="navigation" style="background:linear-gradient(180deg, black,black,black, black, black,black,black, black, #1ab36c00);">
+            <div class="container-fluid">
+              <a class="navbar-brand border px-2 py-1 border-2 rounded-3" style="font-weight: bold;" href="index.html">JHC</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent" style="padding-bottom: 1em;">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      Services
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#webDev">Web Dev</a></li>
+                      <li><a class="dropdown-item" href="#uxui">UX/UI Design</a></li>
+                      <li><a class="dropdown-item" href="#graphicDesign">Graphic Design</a></li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="#laserEngraving">Laser Engraving</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#contactForm">Contact</a>
+                  </li>
+                </ul>
+                <form class="d-flex">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-light" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>  
+          <div class="gradient-overlay"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 text-center">
+                        <!-- container for hero elements -->
+                        <div class="text-white container d-flex flex-column">
+                            <!-- logo and h1 -->
+                            <div class="d-flex flex-column align-items-center pt-4 container" style="background-color: rgba(0, 0, 0, 0.5); border: 3px solid white; border-radius: 25px; margin-top: 3em; max-width: 696px;">
+                            <img class="img-fluid w-25 pt-2" src="images/jhc_logo.svg" alt="logo">
+                            <h1 class="text-center text-white pt-2 pb-4">Jack Habboosh Creatives</h1>
+                            </div>
+                            <div class="container d-flex flex-column justify-content-center"
+                            style="height: 75vh; max-height: 60vh; max-width: 450px;">
+                            <!-- center text on mobile and tablet -->
+                            <p class="text-center bg-black p-4 mt-4 rounded-3 border border-2">Local Ottawa website & graphic designer,
+                                looking for an excuse to be creative. If you're new here, be sure to check out <span
+                                class="text-light fw-bold border-bottom border-light"> Our Services</span> and <span
+                                class="text-success fw-bold border-bottom border-success">Samples</span> below!</p>
+                            <span class="d-flex justify-content-around"><a href="#services"
+                                class="btn btn-light fw-bold border-3 rounded-3 px-3 py-1 ourServ">Our Services</a><a href="#samples"
+                                class="btn btn-success border-3 border-warning px-3 py-1" style="border: solid 2px;">View Samples &ThinSpace;<i class="fa-solid fa-caret-right"></i></a></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+      </header>
     <!-- load javascript after all else has loaded -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
