--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <!-- class and id of hero for css selection. background image used -->
-        <section class="hero" id="hero" style="background-image: url('/images/pexels-samuel-bütikofer-5226950.jpg'); background-size: cover; height: 100vh;">
+        <section class="hero" id="hero" style="background-image: url('images/pexels-samuel-bütikofer-5226950.jpg'); background-size: cover; height: 100vh;">
           <nav class="navbar navbar-expand-lg navbar-dark" id="navigation" style="background:linear-gradient(180deg, black,black,black, black, black,black,black, black, #1ab36c00);">
             <div class="container-fluid">
               <a class="navbar-brand border px-2 py-1 border-2 rounded-3" style="font-weight: bold;" href="index.html">JHC</a>
