--- a/index.html
+++ b/index.html
@@ -85,6 +85,20 @@
             </div>
         </section>
       </header>
+      <main>
+        <!-- About us section -->
+        <section class="aboutUs text-light p-4 text-start">
+            <div class="container col-md-8 col-lg-8">
+                <h2>About us</h2>
+                <img class="img-fluid col-md-8  col-lg-6 col-xl-4 pb-4 float-md-start p-md-2" src="images/pexels-samuel-bütikofer-5226950.jpg" alt="">
+                <p class="">An Interactive Media Design student with interests in Web Development, UX/UI Design, Graphic Design & Laser Engraving. If you need to tackle a problem efficiently and creatively in a timely manner, then look no futher.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat animi expedita dolore impedit consequuntur, sit earum quam non quod qui ex soluta fuga et maxime officia vitae atque voluptas rem?
+                    Non, provident? Non mollitia aliquam enim aspernatur voluptates tempora consectetur obcaecati suscipit pariatur odio similique, sunt dolorem numquam dolores molestiae nihil vero, dicta veniam iure error. Distinctio enim non modi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio nesciunt totam dolorem obcaecati ab enim labore tempore? Delectus provident voluptate iure accusantium nesciunt ad quod velit maxime eaque. Quod, Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae optio eligendi facilis omnis ad numquam vero distinctio ducimus facere, aspernatur non consequuntur qui quasi odit rem provident perspiciatis aliquid! Impedit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo tempore corporis modi dolorem aut officiis, maiores illo blanditiis rerum, ad molestiae, labore doloremque! Provident dolorem deserunt praesentium laborum temporibus magni?
+                    Corporis mollitia perspiciatis assumenda id error placeat repudiandae illum dolorem excepturi delectus iste aliquid, voluptate aperiam nesciunt sequi modi ad fugit culpa quidem fugiat. Placeat numquam voluptatem cum aperiam eos?
+                    Saepe aspernatur nesciunt voluptatem magnam impedit quia deserunt repudiandae labore corrupti omnis consequuntur ad aliquam accusamus dolore, porro dolores perferendis maiores est asperiores nam. Maiores necessitatibus aliquid provident laudantium nulla.
+                </p></div>   
+        </section>
+      </main>
     <!-- load javascript after all else has loaded -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
