Fixes overflow problem

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <header>
-        <!-- class and id of hero for css selection. background image used -->
-        <section class="hero" id="hero" style="background-image: url('images/pexels-samuel-bütikofer-5226950.jpg'); background-size: cover; height: 100vh;">
+        <!-- class and id of hero for css selection. background image used. margin auto fixes overflow problem on mobile and when opening inspect element -->
+        <section class="hero" id="hero" style="background-image: url('images/pexels-samuel-bütikofer-5226950.jpg'); background-size: cover; margin: auto;">
           <nav class="navbar navbar-expand-lg navbar-dark" id="navigation" style="background:linear-gradient(180deg, black,black,black, black, black,black,black, black, #1ab36c00);">
             <div class="container-fluid">
               <a class="navbar-brand border px-2 py-1 border-2 rounded-3" style="font-weight: bold;" href="index.html">JHC</a>
@@ -86,7 +86,7 @@
       </header>
       <main>
           <!-- About us section -->
-          <section class="aboutUs text-light p-4 text-start">
+          <section class="aboutUs text-light p-4 text-start" id="about">
               <div class="container col-md-8 col-lg-8">
                   <h2>About us</h2>
                   <img class="img-fluid col-md-8  col-lg-6 col-xl-4 pb-4 float-md-start p-md-2"
@@ -160,7 +160,7 @@
                         <img class="img-fluid pb-5" src="images/pexels-samuel-bütikofer-5226950.jpg" alt="temp">
                     </div>
                       <div class="col-lg-6">
-                          <p class="bg-success text-warning p-3">At Jack Habboosh Creatives, we are always looking for ways to improve and expand our services. We are constantly exploring new technologies and techniques to ensure that we are providing our clients with the best possible solutions for their businesses. In this section, we will highlight some of the new and exciting developments that we have been working on, including new laser engraving products, enhanced CMS customization, and improved web design and development processes.
+                          <p class="bg-success text-white p-3">At Jack Habboosh Creatives, we are always looking for ways to improve and expand our services. We are constantly exploring new technologies and techniques to ensure that we are providing our clients with the best possible solutions for their businesses. In this section, we will highlight some of the new and exciting developments that we have been working on, including new laser engraving products, enhanced CMS customization, and improved web design and development processes.
                             First and foremost, we are excited to announce that we have recently expanded our laser engraving capabilities. We now offer a wide range of new products including keychains, coasters, and custom boxes. These products are perfect for businesses looking for unique and personalized gifts for their customers or employees. We can accommodate orders of up to 300 at a time, so whether you need a few items or a large batch, we can handle it.
                             In addition to our new laser engraving products, we are also expanding our ability to provide better CMS customization for themes and other functionality. We understand that every business is unique and that each client has different needs. That is why we are committed to providing custom solutions for our clients, ensuring that their businesses are represented in the way they want. We are currently working on new tools and techniques that will allow us to provide more advanced customization options for our clients.
                             Finally, we are also enhancing the way we do our web design and development process. We are always looking for ways to improve and stay up-to-date with the latest best practices in the industry. We are currently exploring new tools and techniques that will allow us to create websites that are not only visually stunning but also functional and easy to navigate. Our goal is to provide our clients with websites that are optimized for search engines and mobile devices, which is essential for any business in today's digital age.
