--- a/index.html
+++ b/index.html
@@ -91,12 +91,7 @@
                   <h2>About us</h2>
                   <img class="img-fluid col-md-8  col-lg-6 col-xl-4 pb-4 float-md-start p-md-2"
                       src="images/pexels-samuel-bütikofer-5226950.jpg" alt="">
-                  <p>Jack Habboosh Creatives is a media creative company that offers a wide range of services to help businesses stand out in their industry. Based in Ottawa, we specialize in interactive media design and laser engraving. Our unique combination of skills and experience allows us to create custom and creative solutions for our clients, ensuring that they get exactly what they need to make their business thrive.
-                    As a student of Algonquin College, I have a strong foundation in website design and development. This knowledge allows me to understand the latest trends and technologies in the industry, and it gives me the ability to create websites that are not only visually stunning but also functional and easy to navigate. My experience in website design and development also ensures that my clients' websites are optimized for search engines and mobile devices, which is essential for any business in today's digital age.
-                    At Jack Habboosh Creatives, we understand that each business is unique and that each client has different needs. That is why we are committed to providing custom solutions for our clients, ensuring that their businesses are represented in the way they want. We work closely with our clients to understand their needs and goals, and we strive to exceed their expectations.
-                    My passion for helping people express their business in the way they want sets me apart from others in the industry. I believe that every business should have a website that reflects its unique identity, and I am dedicated to making that happen for my clients.
-                    In addition to our focus on custom solutions, our location in Ottawa also allows us to offer our services to a variety of local businesses. Whether you are a small startup or a medium-sized enterprise, we have the skills and experience to help you achieve your goals.
-                    At Jack Habboosh Creatives, we are dedicated to providing our clients with high-quality services that will help their businesses stand out in the crowded market. If you are looking for a media creative company that will work with you to achieve your goals, contact us today to schedule a consultation.</p>
+                  <p>At Jack Habboosh Creatives, we offer a wide range of services to help businesses stand out in their industry. Our skills in interactive media design and laser engraving allow us to create custom and creative solutions for our clients, ensuring that they get exactly what they need to make their business thrive. We work closely with our clients to understand their needs and goals and strive to exceed their expectations. Our passion for helping businesses express their unique identity sets us apart and our location in Ottawa allows us to serve a variety of local businesses. We are dedicated to providing high-quality services and making a positive impact on our clients' businesses.</p>
               </div>
           </section>
           <!-- Services Section -->
@@ -154,21 +149,7 @@
                       </div>
                   </div>
               </div>
-              <div class="container">
-                  <div class="row">
-                    <div class="col-lg-6">
-                        <img class="img-fluid pb-5" src="images/pexels-samuel-bütikofer-5226950.jpg" alt="temp">
-                    </div>
-                      <div class="col-lg-6">
-                          <p class="bg-success text-white p-3">At Jack Habboosh Creatives, we are always looking for ways to improve and expand our services. We are constantly exploring new technologies and techniques to ensure that we are providing our clients with the best possible solutions for their businesses. In this section, we will highlight some of the new and exciting developments that we have been working on, including new laser engraving products, enhanced CMS customization, and improved web design and development processes.
-                            First and foremost, we are excited to announce that we have recently expanded our laser engraving capabilities. We now offer a wide range of new products including keychains, coasters, and custom boxes. These products are perfect for businesses looking for unique and personalized gifts for their customers or employees. We can accommodate orders of up to 300 at a time, so whether you need a few items or a large batch, we can handle it.
-                            In addition to our new laser engraving products, we are also expanding our ability to provide better CMS customization for themes and other functionality. We understand that every business is unique and that each client has different needs. That is why we are committed to providing custom solutions for our clients, ensuring that their businesses are represented in the way they want. We are currently working on new tools and techniques that will allow us to provide more advanced customization options for our clients.
-                            Finally, we are also enhancing the way we do our web design and development process. We are always looking for ways to improve and stay up-to-date with the latest best practices in the industry. We are currently exploring new tools and techniques that will allow us to create websites that are not only visually stunning but also functional and easy to navigate. Our goal is to provide our clients with websites that are optimized for search engines and mobile devices, which is essential for any business in today's digital age.
-                            In conclusion, at Jack Habboosh Creatives, we are always exploring new and exciting ways to improve our services and provide our clients with the best possible solutions for their businesses. Whether you are looking for new laser engraving products, enhanced CMS customization, or improved web design and development processes, we have you covered. We are committed to providing our clients with high-quality services that will help their businesses stand out in the crowded market. Contact us today to schedule a consultation and see how we can help your business thrive.</p>
-                      </div>
-                      
-                  </div>
-              </div>
+              
           </section>
           <!-- Portfolio Section -->
           <section class="bg-success text-light p-5" id="portfolio">
@@ -246,7 +227,7 @@
               <div class="container">
                   <div class="row">
                       <div class="col-lg-12 text-center">
-                          <h2 class="section-heading">Contact</h2>
+                          <h2 class="section-heading p-5 fw-bold">Contact</h2>
                       </div>
                   </div>
               </div>
@@ -303,13 +284,8 @@
       </main>
       <!-- Footer -->
       <footer class="bg-success text-center text-warning p-4">
-          <div class="container">
-              <div class="row">
-                  <div class="col-md-12">
-                      <p>Copyright &copy; Jack Habboosh Creatives 2023. &NewLine; Hero banner images from <a class="text-white" role="link" href="https://unsplash.com">Unsplash</a></p>
-                  </div>
-              </div>
-          </div>
+        <p>Copyright &copy; Jack Habboosh Creatives 2023 </p> 
+        <p>Banner images from <a class="text-white" role="link" href="https://unsplash.com">Unsplash</a>.</p>
       </footer>
     <!-- load fa -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
