--- a/index.html
+++ b/index.html
@@ -86,11 +86,10 @@
       </header>
       <main>
           <!-- About us section -->
-          <section class="aboutUs text-light p-4 text-start" id="about">
-              <div class="container col-md-8 col-lg-8">
-                  <h2>About us</h2>
-                  <img class="img-fluid col-md-8  col-lg-6 col-xl-4 pb-4 float-md-start p-md-2"
-                      src="images/pexels-samuel-bütikofer-5226950.jpg" alt="">
+          <section class="aboutUs text-light text-center pb-5" id="about">
+              <div class="container-fluid col-md-8 col-lg-8 pb-4">
+                  <h2 class="fw-bold p-5">About us</h2>
+                  <img class="img-fluid col-md-8 col-lg-6 col-xl-4 mb-4 float-md-start p-md-2" src="images/homeHero.jpg" alt="hero image of people working">
                   <p>At Jack Habboosh Creatives, we offer a wide range of services to help businesses stand out in their industry. Our skills in interactive media design and laser engraving allow us to create custom and creative solutions for our clients, ensuring that they get exactly what they need to make their business thrive. We work closely with our clients to understand their needs and goals and strive to exceed their expectations. Our passion for helping businesses express their unique identity sets us apart and our location in Ottawa allows us to serve a variety of local businesses. We are dedicated to providing high-quality services and making a positive impact on our clients' businesses.</p>
               </div>
           </section>
@@ -99,7 +98,7 @@
               <div class="container">
                   <div class="row">
                       <div class="col-lg-12 text-center">
-                          <h2 class="section-heading pt-5">Services</h2>
+                          <h2 class="section-heading pt-5 fw-bold">Services</h2>
                           
                       </div>
                   </div>
@@ -284,8 +283,8 @@
       </main>
       <!-- Footer -->
       <footer class="bg-success text-center text-warning p-4">
-        <p>Copyright &copy; Jack Habboosh Creatives 2023 </p> 
-        <p>Banner images from <a class="text-white" role="link" href="https://unsplash.com">Unsplash</a>.</p>
+        <p class="m-0">Copyright &copy; Jack Habboosh Creatives 2023 </p> 
+        <p class="m-0">Banner images from <a class="text-white" role="link" href="https://unsplash.com">Unsplash</a>.</p>
       </footer>
     <!-- load fa -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js" integrity="sha512-YSdqvJoZr83hj76AIVdOcvLWYMWzy6sJyIMic2aQz5kh2bPTd9dzY3NtdeEAzPp/PhgZqr4aJObB3ym/vsItMg==" crossorigin="anonymous"></script>
